Coding signup name and company fields for signup

--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,6 +1,18 @@
 <section class="signup-form">
   <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
     <mat-form-field>
+      <input type="text" matInput placeholder="Your name" ngModel name="name" text required #nameInput="ngModel">
+      <mat-error *ngIf="nameInput.hasError('required')">Field must not be empty.</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Select the company</mat-label>
+      <mat-select [(ngModel)]="selectedValue" name="company">
+        <mat-option *ngFor="let company of companies" [value]="company.value">
+          {{company.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
       <input type="email" matInput placeholder="Your email" ngModel name="email" email required #emailInput="ngModel">
       <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty.</mat-error>
       <mat-error *ngIf="!emailInput.hasError('required')">E-Mail is invalid.</mat-error>
