Coding navigations tabs for past transactions and new transactions

--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -1,1 +1,8 @@
-<p>transactions works!</p>
+<mat-tab-group mat-align-tabs="center">
+  <mat-tab label="New Transaction">
+    <app-new-transaction></app-new-transaction>
+  </mat-tab>
+  <mat-tab label="Summary">
+    <app-past-transactions></app-past-transactions>
+  </mat-tab>
+</mat-tab-group>
