--- a/src/app/transactions/new-transaction/new-transaction.component.html
+++ b/src/app/transactions/new-transaction/new-transaction.component.html
@@ -6,10 +6,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Choose a date</mat-label>
           <input matInput [matDatepicker]="picker" />
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="picker"
-          ></mat-datepicker-toggle>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
         </mat-form-field>
         <div>
@@ -23,10 +20,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Choose a category</mat-label>
           <mat-select>
-            <mat-option
-              *ngFor="let category of categories"
-              [value]="category.value"
-            >
+            <mat-option *ngFor="let category of categories" [value]="category.value">
               {{ category.viewValue }}
             </mat-option>
           </mat-select>
@@ -42,19 +36,13 @@
       <mat-form-field class="example-form-field" appearance="fill">
         <mat-label>Insert the value</mat-label>
         <input matInput type="number" [(ngModel)]="value" />
-        <button
-          *ngIf="value"
-          matSuffix
-          mat-icon-button
-          aria-label="Clear"
-          (click)="value = ''"
-        >
+        <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value = ''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
       <div>
         <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="stepper.reset()">Reset</button>
+        <button mat-button matStepperNext>Next</button>
       </div>
     </mat-step>
     <mat-step>
