Coding the edit transaction module. Added the edit and delete buttons to the past transactions. On transaction component was added the editing transaction tab

--- a/src/app/transactions/transactions.component.html
+++ b/src/app/transactions/transactions.component.html
@@ -5,4 +5,7 @@
   <mat-tab label="Summary">
     <app-past-transactions></app-past-transactions>
   </mat-tab>
+  <mat-tab label="Editing Transaction">
+    <app-edit-transaction></app-edit-transaction>
+  </mat-tab>
 </mat-tab-group>
