--- a/src/app/transactions/past-transactions/past-transactions.component.html
+++ b/src/app/transactions/past-transactions/past-transactions.component.html
@@ -26,6 +26,14 @@
       <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let element">
+        <button type="submit" mat-raised-button color="primary">Edit</button>
+        <button type="submit" mat-raised-button color="warn">Delete</button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
