--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -19,6 +19,9 @@
         <a routerLink="/transactions">Transactions</a>
       </li>
       <li>
+        <a routerLink="/profile">Profile</a>
+      </li>
+      <li>
         <a style="cursor: pointer" (click)="onLogout()">Logout</a>
       </li>
     </ul>
