--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -7,9 +7,13 @@
     <mat-icon>input</mat-icon>
     <span class="nav-caption">Login</span>
   </a>
-  <a mat-list-item routerLink="/training" (click)="onClose()">
+  <a mat-list-item routerLink="/transactions" (click)="onClose()">
     <mat-icon>euro_symbol</mat-icon>
     <span class="nav-caption">Transactions</span>
+  </a>
+  <a mat-list-item routerLink="/profile" (click)="onClose()">
+    <mat-icon>account_circlel</mat-icon>
+    <span class="nav-caption">Profile</span>
   </a>
   <mat-list-item>
     <button mat-icon-button (click)="onLogout()">
