Coding edit user information layout

--- a/src/app/profile/edit-user/edit-user.component.html
+++ b/src/app/profile/edit-user/edit-user.component.html
@@ -1,1 +1,22 @@
-<p>edit-user works!</p>
+<section class="editUser-form">
+  <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <mat-form-field>
+      <input type="text" matInput placeholder="Edit your name" ngModel name="name" text required #nameInput="ngModel">
+      <mat-error *ngIf="nameInput.hasError('required')">Field must not be empty.</mat-error>
+    </mat-form-field>
+    <mat-form-field appearance="fill">
+      <mat-label>Edit your Role</mat-label>
+      <mat-select [(ngModel)]="selectedValue" name="company">
+        <mat-option *ngFor="let company of companies" [value]="company.value">
+          {{company.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field hintLabel="Should be at least 6 characters long.">
+      <input type="password" matInput placeholder="Edit your password" ngModel name="password" required minlength="6" #pwInput="ngModel">
+      <mat-hint align="end">{{ pwInput.value?.length }} / 6</mat-hint>
+      <mat-error>Has to be at least 6 characters long.</mat-error>
+    </mat-form-field>
+    <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Update</button>
+  </form>
+</section>
