--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -6,8 +6,8 @@
     </mat-form-field>
     <mat-form-field appearance="fill">
       <mat-label>Select the company</mat-label>
-      <mat-select [(ngModel)]="selectedValue" name="company">
-        <mat-option *ngFor="let company of companies" [value]="company.companyName">
+      <mat-select [(ngModel)]="selectedValue" name="company_id">
+        <mat-option *ngFor="let company of companies" [value]="company.id">
           {{company.companyName}}
         </mat-option>
       </mat-select>
@@ -18,9 +18,14 @@
       <mat-error *ngIf="!emailInput.hasError('required')">E-Mail is invalid.</mat-error>
     </mat-form-field>
     <mat-form-field hintLabel="Should be at least 6 characters long.">
-      <input type="password" matInput placeholder="Your password" ngModel name="password" required minlength="6" #pwInput="ngModel">
+      <input type="password" matInput placeholder="Your password" ngModel name="password" required minlength="6"
+        #pwInput="ngModel">
       <mat-hint align="end">{{ pwInput.value?.length }} / 6</mat-hint>
       <mat-error>Has to be at least 6 characters long.</mat-error>
+      <p></p>
+    </mat-form-field>
+    <mat-form-field>
+      <input type="number" matInput placeholder="Role id" ngModel name="role_id" text required #nameInput="ngModel">
     </mat-form-field>
     <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
   </form>
