--- a/src/app/transactions/past-transactions/past-transactions.component.html
+++ b/src/app/transactions/past-transactions/past-transactions.component.html
@@ -8,7 +8,7 @@
 
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="date">
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="category">
       <th mat-header-cell *matHeaderCellDef> Category </th>
-      <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.category_id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
