--- a/src/app/transactions/past-transactions/past-transactions.component.html
+++ b/src/app/transactions/past-transactions/past-transactions.component.html
@@ -18,12 +18,12 @@
 
     <ng-container matColumnDef="category">
       <th mat-header-cell *matHeaderCellDef> Category </th>
-      <td mat-cell *matCellDef="let element"> {{element.category_id}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.categoryName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="amount">
       <th mat-header-cell *matHeaderCellDef> Amount </th>
-      <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.amount}} € </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
