--- a/src/app/profile/user-list/user-list.component.html
+++ b/src/app/profile/user-list/user-list.component.html
@@ -4,7 +4,7 @@
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. User name" #input>
   </mat-form-field>
 
-  <!-- <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="role">
       <th mat-header-cell *matHeaderCellDef> Role </th>
-      <td mat-cell *matCellDef="let element"> {{element.role}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.role_id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
@@ -35,5 +35,5 @@
     <tr class="mat-row" *matNoDataRow>
       <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
     </tr>
-  </table> -->
+  </table>
 </div>
