--- a/src/app/transactions/past-transactions/past-transactions.component.html
+++ b/src/app/transactions/past-transactions/past-transactions.component.html
@@ -29,7 +29,7 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
-        <button type="submit" mat-raised-button color="primary">Edit</button>
+        <button type="submit" mat-raised-button color="primary" [routerLink]="['/editTransaction', element.id ]">Edit</button>
         <button type="submit" mat-raised-button color="warn" (click)= "deleteBotton(element)">Delete</button>
       </td>
     </ng-container>
