--- a/src/app/profile/user-list/user-list.component.html
+++ b/src/app/profile/user-list/user-list.component.html
@@ -24,8 +24,8 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
-        <button type="submit" mat-raised-button color="primary">Edit</button>
-        <button type="submit" mat-raised-button color="warn">Delete</button>
+        <button type="submit" mat-raised-button color="primary" [routerLink]="['/editprofile', element.id]">Edit</button>
+        <button type=" submit" mat-raised-button color="warn">Delete</button>
       </td>
     </ng-container>
 
