Coding onboard-theme on scss file and aplying the theme on angular.json file. Adding onboard logo on welcome component

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,1 +1,3 @@
-<p>welcome works!</p>
+<div fxLayout="column" fxLayoutAlign="center center">
+  <img src="../../assets/images/JR_20629-Onboard_Logo.png" alt="onboardLogo" width="650" height="650" />
+</div>
