--- a/src/app/transactions/past-transactions/past-transactions.component.html
+++ b/src/app/transactions/past-transactions/past-transactions.component.html
@@ -30,7 +30,7 @@
       <th mat-header-cell *matHeaderCellDef> Actions </th>
       <td mat-cell *matCellDef="let element">
         <button type="submit" mat-raised-button color="primary" [routerLink]="['/editTransaction', element.id ]">Edit</button>
-        <button type="submit" mat-raised-button color="warn" (click)= "deleteBotton(element)">Delete</button>
+        <button type="submit" mat-raised-button color="warn" (click)= "deleteButton(element)">Delete</button>
       </td>
     </ng-container>
 
